Header Section  Responsive Complete

--- a/index.html
+++ b/index.html
@@ -1,15 +1,100 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <link rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@40,400,0,0" />
+
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800&display=swap"
+      rel="stylesheet">
    <link rel="stylesheet" href="./CSS/styles.css">
    <link rel="stylesheet" href="./CSS/responsive.css">
    <title>Ifluencer Gear</title>
 </head>
+
 <body>
    <!-- ......... Header Section Start ........ -->
-   <Header></Header>
+   <header>
+      <!-- Nav Menu -->
+      <section class="nav-container">
+         <div class="nav-manu">
+            <div class="menu-icon">
+               <a href="">
+                  <span class="material-symbols-outlined">menu</span>
+               </a>
+            </div>
+            <h2 class="logo">Influencer products</h2>
+            <div class="secound-cart-icon">
+               <span class="material-symbols-outlined">shopping_cart</span>
+            </div>
+            <ul class="nav-bar">
+               <li>Home</li>
+               <li>products</li>
+               <li>Sign up</li>
+               <li>Log in</li>
+               <li>
+                  <span class="material-symbols-outlined search-cart-icon">search</span>
+               </li>
+               <li>
+                  <span class="material-symbols-outlined search-cart-icon">shopping_cart</span>
+               </li>
+            </ul>
+
+         </div>
+         <!-- 2nd Nav bar for small device -->
+         <div class="nav-bar2nd">
+            <ul class="nav-bar2">
+               <li>Home</li>
+               <li>products</li>
+               <li>Sign up</li>
+               <li>Log in</li>
+               <li>
+                  <span class="material-symbols-outlined">
+                     search
+                  </span>
+               </li>
+            </ul>
+         </div>
+      </section>
+      <!-- Banner  -->
+      <section class="banner-container">
+         <div class="banner-content">
+            <h1 class="banner-title">
+               Start your Journey as <br>
+               Influencer
+            </h1>
+            <p class="banner-description">
+               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem vestibulum sed scelerisque eros. Lectus
+               faucibus.
+            </p>
+            <div class="button-banner">
+               <a href="#"><button class="btn-praimary " type="button">Preebook now <span
+                        class="material-symbols-outlined">
+                        arrow_forward
+                     </span></button></a>
+            </div>
+         </div>
+         <div class="banner-image-container">
+            <img src="./images/main-camera.png" alt="">
+         </div>
+      </section>
+      <!-- Sponsors -->
+      <hr>
+      <section class="sponsor-container">
+         <img src="./logos/Alibaba.svg" alt="" class="sponsor-image">
+         <img src="./logos/Amazon.svg" alt="" class="sponsor-image">
+         <img src="./logos/Daraz.pk Logo.svg" alt="" class="sponsor-image">
+         <img src="./logos/Ebay.svg" alt="" class="sponsor-image">
+         <img src="./logos/Rakuten.svg" alt="" class="sponsor-image">
+         <img src="./logos/Walmart.svg" alt="" class="sponsor-image">
+         <img src="./logos/Target.svg" alt="" class="sponsor-image">
+      </section>
+      <hr>
+   </header>
    <!-- ......... Header Section End ........ -->
    <!-- ......... Main/Body-Contents Section Start ........ -->
    <main></main>
@@ -20,4 +105,5 @@
    <!-- ......... Footer Section End ........ -->
 
 </body>
+
 </html>
