Popular Collection Section  Responsive Update

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800&display=swap"
       rel="stylesheet">
+
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+      integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+      crossorigin="anonymous" referrerpolicy="no-referrer" />
    <link rel="stylesheet" href="./CSS/styles.css">
    <link rel="stylesheet" href="./CSS/responsive.css">
    <title>Ifluencer Gear</title>
@@ -72,10 +76,11 @@
                faucibus.
             </p>
             <div class="button-banner">
-               <a href="#"><button class="btn-praimary " type="button">Preebook now <span
-                        class="material-symbols-outlined">
-                        arrow_forward
-                     </span></button></a>
+               <a href="#">
+                  <button class="btn-praimary " type="button">Preebook now <span
+                        class="material-symbols-outlined">arrow_forward</span>
+                  </button>
+               </a>
             </div>
          </div>
          <div class="banner-image-container">
@@ -97,7 +102,195 @@
    </header>
    <!-- ......... Header Section End ........ -->
    <!-- ......... Main/Body-Contents Section Start ........ -->
-   <main></main>
+   <main>
+      <!-- Popular Collection -->
+      <section class="collection-container">
+         <h2 class="collection-grid-title">Popular Collection</h2>
+         <div class="collection-grid-container">
+            <div class="collection-item-container">
+               <div class="collection-item-image">
+                  <img src="./images/tripod.png" alt="">
+               </div>
+               <h2 class="collection-item-name">Flex Tripod</h2>
+               <p class="collection-item-price">$50.48</p>
+               <div class="item-ratings">
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-regular fa-star-half-stroke"></i>
+                  <span class="item-ratings-value">4.9</span>
+               </div>
+               <div class="item-description">
+                  <p>Wordwide shifting</p>
+                  <p>available</p>
+                  <p>Buyers protection possible!</p>
+               </div>
+            </div>
+            <div class="collection-item-container">
+               <div class="collection-item-image">
+                  <img src="./images/tripod.png" alt="">
+               </div>
+               <h2 class="collection-item-name">Flex Tripod</h2>
+               <p class="collection-item-price">$50.48</p>
+               <div class="item-ratings">
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-regular fa-star-half-stroke"></i>
+                  <span class="item-ratings-value">4.9</span>
+               </div>
+               <div class="item-description">
+                  <p>Wordwide shifting</p>
+                  <p>available</p>
+                  <p>Buyers protection possible!</p>
+               </div>
+            </div>
+            <div class="collection-item-container">
+               <div class="collection-item-image">
+                  <img src="./images/tripod.png" alt="">
+               </div>
+               <h2 class="collection-item-name">Flex Tripod</h2>
+               <p class="collection-item-price">$50.48</p>
+               <div class="item-ratings">
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-regular fa-star-half-stroke"></i>
+                  <span class="item-ratings-value">4.9</span>
+               </div>
+               <div class="item-description">
+                  <p>Wordwide shifting</p>
+                  <p>available</p>
+                  <p>Buyers protection possible!</p>
+               </div>
+            </div>
+            <div class="collection-item-container">
+               <div class="collection-item-image">
+                  <img src="./images/tripod.png" alt="">
+               </div>
+               <h2 class="collection-item-name">Flex Tripod</h2>
+               <p class="collection-item-price">$50.48</p>
+               <div class="item-ratings">
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-regular fa-star-half-stroke"></i>
+                  <span class="item-ratings-value">4.9</span>
+               </div>
+               <div class="item-description">
+                  <p>Wordwide shifting</p>
+                  <p>available</p>
+                  <p>Buyers protection possible!</p>
+               </div>
+            </div>
+            <div class="collection-item-container">
+               <div class="collection-item-image">
+                  <img src="./images/tripod.png" alt="">
+               </div>
+               <h2 class="collection-item-name">Flex Tripod</h2>
+               <p class="collection-item-price">$50.48</p>
+               <div class="item-ratings">
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-regular fa-star-half-stroke"></i>
+                  <span class="item-ratings-value">4.9</span>
+               </div>
+               <div class="item-description">
+                  <p>Wordwide shifting</p>
+                  <p>available</p>
+                  <p>Buyers protection possible!</p>
+               </div>
+            </div>
+            <div class="collection-item-container">
+               <div class="collection-item-image">
+                  <img src="./images/tripod.png" alt="">
+               </div>
+               <h2 class="collection-item-name">Flex Tripod</h2>
+               <p class="collection-item-price">$50.48</p>
+               <div class="item-ratings">
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-regular fa-star-half-stroke"></i>
+                  <span class="item-ratings-value">4.9</span>
+               </div>
+               <div class="item-description">
+                  <p>Wordwide shifting</p>
+                  <p>available</p>
+                  <p>Buyers protection possible!</p>
+               </div>
+            </div>
+            <div class="collection-item-container">
+               <div class="collection-item-image">
+                  <img src="./images/tripod.png" alt="">
+               </div>
+               <h2 class="collection-item-name">Flex Tripod</h2>
+               <p class="collection-item-price">$50.48</p>
+               <div class="item-ratings">
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-regular fa-star-half-stroke"></i>
+                  <span class="item-ratings-value">4.9</span>
+               </div>
+               <div class="item-description">
+                  <p>Wordwide shifting</p>
+                  <p>available</p>
+                  <p>Buyers protection possible!</p>
+               </div>
+            </div>
+            <div class="collection-item-container">
+               <div class="collection-item-image">
+                  <img src="./images/tripod.png" alt="">
+               </div>
+               <h2 class="collection-item-name">Flex Tripod</h2>
+               <p class="collection-item-price">$50.48</p>
+               <div class="item-ratings">
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-regular fa-star-half-stroke"></i>
+                  <span class="item-ratings-value">4.9</span>
+               </div>
+               <div class="item-description">
+                  <p>Wordwide shifting</p>
+                  <p>available</p>
+                  <p>Buyers protection possible!</p>
+               </div>
+            </div>
+            <div class="collection-item-container">
+               <div class="collection-item-image">
+                  <img src="./images/tripod.png" alt="">
+               </div>
+               <h2 class="collection-item-name">Flex Tripod</h2>
+               <p class="collection-item-price">$50.48</p>
+               <div class="item-ratings">
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-regular fa-star-half-stroke"></i>
+                  <span class="item-ratings-value">4.9</span>
+               </div>
+               <div class="item-description">
+                  <p>Wordwide shifting</p>
+                  <p>available</p>
+                  <p>Buyers protection possible!</p>
+               </div>
+            </div>
+            
+         </div>
+      </section>
+   </main>
    <!-- ......... Main/Body-Contents Section End ........ -->
 
    <!-- ......... Footer Section Start ........ -->
